# agentic-kb-platform

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/kb-builder/: pyproject.toml
apps/kb-builder/src/kb_builder/: __init__.py  health.py
apps/kb-builder/tests/: test_build_engine.py  test_connectors.py  test_graphify_adapter.py  test_health.py  test_indexer.py  test_linker.py  test_wikify.py
apps/mcp-server/: pyproject.toml
apps/mcp-server/src/mcp_server/: __init__.py  config.py  health.py  server.py
apps/mcp-server/tests/: conftest.py  mcp_test_support.py  test_mcp_server_auth.py  test_mcp_server_health.py  test_mcp_server_tools.py
evals/: .gitignore  README.md  baseline.json  pyproject.toml  run.py  run_all.py  task_context_eval.py  task_context_tasks.yaml
evals/agent_task_cases/: 01_plan_new_endpoint.yaml  02_auth_validation_rules.yaml  03_embeddings_change_impact.yaml  04_tests_for_similar_endpoint.yaml  05_release_monitoring_guidance.yaml  06_conflicting_evidence.yaml  task_context_ab_v1.yaml
evals/harness/: __init__.py  alias.py  baseline.py  candidate_fixture.py  candidates.py  cases.py  consolidated_report.py  dashboard.py  executor.py  fixtures.py  golden.py  golden_exec.py  judge.py  judge_fixture.py  metrics.py  records.py  report.py  run_status.py  task_context_ab.py  task_context_latency.py  tier_parsers.py  tier_result.py  tiers.py
evals/retrieval_cases/: 01_payment_validation.yaml  02_source_backed_and_wiki.yaml  03_webhook_retry.yaml  04_generation_cache.yaml  05_budget_denial.yaml  06_verify_answer_receipt.yaml  07_platform_trust_gate.yaml  08_run_budget_escalation.yaml  09_acl_must_not_leak.yaml  alias_golden_v1.yaml
evals/retrieval_cases/golden/: imports_of_z.yaml  what_calls_y.yaml  where_is_x_defined.yaml  which_card_drove_y.yaml  why_was_x_changed.yaml
evals/tests/: test_alias.py  test_allowances.py  test_baseline.py  test_candidates.py  test_cases_load.py  test_dashboard.py  test_golden.py  test_golden_gate.py  test_harness_end_to_end.py  test_judge.py  test_metric_names.py  test_metrics.py  test_report.py  test_run_all.py  test_run_status.py  test_task_context_ab.py  test_task_context_latency.py  test_tier_parsers.py  test_tier_result.py  test_tiers.py
services/kb-builder/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  sources.example.yaml
services/kb-builder/migrations/: env.py
services/kb-builder/migrations/versions/: 0002_source_identity_and_single_active_build.py  0004_knowledge_artifact_spans.py  0005_knowledge_edge_linker_unique.py  0006_embedding_cache_vector.py  0007_retrieval_event_status.py  0008_acl_teams.py  0009_knowledge_edge_trust_class.py  0010_kb_build_run_publish_gates.py  0011_knowledge_edge_relation_schema_and_evidence.py  0012_kb_version_membership.py  0013_relationship_candidate.py  0014_relationship_judgment_cache.py  0015_entailment_cache.py  0016_knowledge_artifact_search_text.py  0017_retrieval_event_details.py  0018_durable_model_output_cache.py  0019_artifact_centrality_score.py  0020_dashboard_views.py  0021_trace_span.py  0022_kb_build_run_ledger_mining_counters.py  0023_v_retrieval_health_ledger_mining_split.py
services/kb-builder/src/agentic_kb_builder/: __init__.py  build.py  export_obsidian.py  health.py  structured_logging.py  try_docify.py  try_wikify.py
services/kb-builder/tests/contract/: test_compose_contract.py  test_import_boundaries.py  test_source_config_contract.py
services/kb-builder/tests/integration/: test_acl_propagation.py  test_alias_miner.py  test_build_cli.py  test_build_engine.py  test_builder_lock.py  test_candidate_generator.py  test_centrality_membership.py  test_code_zero_llm_build.py  test_cross_domain_build.py  test_dashboard_views.py  test_durable_cache_crash.py  test_embedding_similarity.py  test_export_obsidian.py  test_graphify.py  test_health.py  test_indexing.py  test_invalidation.py  test_judge.py  test_ledger_mining.py  test_ledger_mining_dashboard_views.py  test_linker.py  test_migration_0017_details.py  test_publish_gates.py  test_registry_roundtrip.py  test_source_config_roundtrip.py  test_trust_class.py  test_wikify.py
services/kb-builder/tests/unit/: test_ado_wiki_backend.py  test_ado_work_item_backend.py  test_alias_golden_subset.py  test_alias_mining.py  test_alias_resolve.py  test_build_connector_selection.py  test_candidate_signals.py  test_centrality.py  test_chat_model_client.py  test_code_skeleton.py  test_common_utilities.py  test_config_loader.py  test_config_validator.py  test_connectors.py  test_cross_domain_links.py  test_docify_anthropic.py  test_docify_endpoint.py  test_docify_mapping.py  test_durable_cache_failsoft.py  test_durable_cache_serialization.py  test_embeddings_factory.py  test_export_obsidian_slug.py  test_git_metadata.py  test_github_rest_backend.py  test_graphify_backend.py  test_http_client.py  test_import_resolution.py  test_judge_parsing.py  test_llm_endpoint.py  test_local_file_search_client.py  test_local_fs_backend.py  test_logging_config.py  test_normalize.py  test_ollama_embedder.py  test_openai_embedder.py  test_production_factory.py  test_search_text_projection.py  test_source_config.py  test_span_recovery.py  test_to_edges.py
services/mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/mcp-server/src/agentic_mcp_server/: __init__.py  __main__.py  config.py  health.py  replay.py  structured_logging.py
services/mcp-server/tests/: broker_test_support.py  conftest.py
services/mcp-server/tests/contract/: test_agent_manifests.py  test_agent_output_schemas.py  test_import_boundaries.py  test_local_dev_auth_not_deployed.py  test_portable_agent_exports.py  test_registry_dependency.py  test_tool_schemas.py  test_tool_surface.py  test_tracing_contract.py
services/mcp-server/tests/integration/: test_auth.py  test_client_enforcement.py  test_context_broker.py  test_expand_tool.py  (+18 more)
services/review-panel/: .env.example  README.md  pyproject.toml
services/review-panel/tests/: panel_test_support.py
(+624 files in other folders)
