[project]
name = "agentic-kb-platform"
version = "0.1.0"
description = "Cost-conscious, Postgres-first KB platform served through a remote MCP Context Broker"
requires-python = ">=3.12"
dependencies = [
    "contracts",
    "common",
    "mcp-server",
    "kb-builder",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
contracts = { workspace = true }
common = { workspace = true }
mcp-server = { workspace = true }
kb-builder = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "packages/contracts/src",
    "packages/common/src",
    "apps/mcp-server/src",
    "apps/kb-builder/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["packages", "apps"]
strict = ["packages"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
