[project]
name = "agentic-evals"
version = "0.1.0"
description = "Benchmark harness: retrieval + agent-task cases, token-cost metrics, baseline diffing. Dev-only, never deployed."
requires-python = ">=3.12"
dependencies = [
    "agentic-mcp-server",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
agentic-mcp-server = { path = "../services/mcp-server", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["harness", "tests", "run.py", "run_all.py"]
strict = ["harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
