[project]
name = "mcp-server"
version = "0.1.0"
description = "Remote MCP server + Context Broker (runtime plane)"
requires-python = ">=3.12"
dependencies = [
    "contracts",
    "common",
    "fastmcp>=3.4.2",
    "db",
]

[tool.uv.sources]
contracts = { workspace = true }
common = { workspace = true }
db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
