[project]
name = "agentic-kb-builder"
version = "0.1.0"
description = "Nightly incremental KB build plane: connectors, docify, graphify, linker, indexing. Owns the Postgres Knowledge Registry schema and migrations."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "azure-search-documents>=11.5",
    "pyyaml>=6.0.3",
    "openai>=2.41.1",
    "graphifyy==0.8.39",
    "json-repair>=0.30",
    "numpy>=2.0",
    "anthropic>=0.109.2",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_kb_builder"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests", "migrations"]
# former packages/ code keeps its strict-mode guarantee after the move
strict = ["src/agentic_kb_builder/domain", "src/agentic_kb_builder/infrastructure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
