[project]
name = "agentic-mcp-server"
version = "0.1.0"
description = "Remote MCP Context Broker runtime plane: policy, retrieval, dedupe, evidence, and budget layer over the active KB version."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "fastmcp>=3.4.2",
    # imported directly (mcp/server.py, telemetry/middleware.py); declared so a
    # fastmcp upgrade can never silently drop them
    "mcp>=1.0",
    "starlette>=0.40",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_mcp_server"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
# the tool contracts keep their former packages/ strict-mode guarantee
strict = ["src/agentic_mcp_server/mcp/tool_schemas", "src/agentic_mcp_server/domain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
