[project]
name = "agentic-review-panel"
version = "0.1.0"
description = "Review-panel draft engine: LangGraph fan-out/join of the four specialist reviewers plus the code_reviewer synthesizer, persisting a developer-gated review DRAFT — never publishing (ADR-0031)."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",
    "langsmith>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
]

[project.scripts]
review-panel = "review_panel.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review_panel"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
# strict on domain and infrastructure per .claude/rules/python.md. graph/ stays at
# standard: langgraph's public generics carry Unknown type args (CachePolicy[Unknown]
# in add_node's signature), which strict flags on every call — a library limitation,
# not our code.
strict = [
    "src/review_panel/domain",
    "src/review_panel/infrastructure",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
